bin_PROGRAMS = lpj
lpj_SOURCES =               \
  overprint.c               \
  parametersmod.f90         \
  randomdistmod.f90         \
  weathergenmod.f90         \
  orbitmod.f90              \
  geohashmod.f90            \
  mpistatevarsmod.f90       \
  iovariablesmod.f90        \
  errormod.f90              \
  coordsmod.f90             \
  initsoilmod.f90           \
  initclimatemod.f90        \
  getyrdatamod.f90          \
  netcdfsetupmod.f90        \
  initjobmod.f90            \
  radiationmod.f90          \
  bioclimmod.f90            \
  alccmod.f90               \
  hetrespmod.f90            \
  snowmod.f90               \
  lightmod.f90              \
  waterbalancemod.f90       \
  pedotransfermod.f90       \
  simplesoilmod.f90         \
  photosynthesismod.f90     \
  nppmod.f90                \
  gppmod.f90                \
  establishmentmod.f90      \
  mortalitymod.f90          \
  allocationmod.f90         \
  turnovermod.f90           \
  killplantmod.f90          \
  individualmod.f90         \
  spitfiremod.f90           \
  soiltemperaturemod.f90    \
  pftparameters.f90         \
  summerphenology.f         \
  reproduction.f            \
  isotope.f                 \
  fire.f                    \
  netcdfoutputmod.f90       \
  landscape_geometrymod.f90 \
  foragersmod.f90           \
  lpjmod.f90                \
  mpimod.f90                \
  drivermod.f90             \
  main.f90
clean-local:
	rm -r -f *.mod *.dSYM
